fix header links color on mobile

--- a/web/assets/dev/scss/bootstrap/_ui-header.scss
+++ b/web/assets/dev/scss/bootstrap/_ui-header.scss
@@ -125,6 +125,7 @@ header {
 		font-family: $font-family-sans-serif-2;
 		font-size: $font-size-lg;
 		line-height: $font-size-lg*2;
+		color: $primary;
 	}
 }
 
